tests/pass/0140_array_logical_short_circuit_avoids_bad_index.ee
fn main() {
    let values = [1];
    println(false && values[10]);
    println(true || values[10]);
}
