tests/fail/0094_array_short_circuit_still_evaluates_needed_bad_index.ee
fn main() {
    let values = [1];
    println(true && values[10]);
}
